# abby

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/: queries.md  setup.md
doxygen/: main_page.md
doxygen/bootstrapped/: header.html
include/: abby.hpp  abby2.hpp
test/: CMakeLists.txt
test/lib/: AABB.cc  AABB.h
test/unittest/: aabb_test.cpp  aabb_tree_test.cpp  abby_test.cpp  hello_test.cpp  node_test.cpp  tree_test.cpp  vec2_test.cpp
